# CMU_Pre-college

./: .gitignore  README.md  demo-video.txt  proposal.txt  pyproject.toml  readme.txt  tp2update.txt
src/: main.py
src/classes/: board.py  button.py  images.py  player.py  ports.py
src/utils/: actions.py  hexCoords.py  images.py  messages.py
